Add Google AdSense script for monetization
Added AdSense verification code to enable ad serving on the site.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Color Tools - Free Color Picker, Converter & Palette Generator</title>
   <meta name="description" content="Free online color tools including color picker, HEX/RGB/HSL converter, random palette generator, and color theory guide. Perfect for designers and developers.">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7228257979516051" crossorigin="anonymous"></script>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
