Add Privacy Policy page for AdSense compliance
- Created privacy-policy.html with comprehensive privacy policy
- Added footer link to Privacy Policy from main page
- Includes Google AdSense disclosure

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 
   <footer>
     <p>&copy; 2026 Color Tools. Free to use for personal and commercial projects.</p>
+    <p style="margin-top: 1rem;">
+      <a href="/privacy-policy.html" style="color: #ccc;">Privacy Policy</a>
+    </p>
   </footer>
 
   <script defer type="text/javascript" src="/main.js"></script>
